--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,11 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"
             android:screenOrientation="landscape"
             android:parentActivityName=".LoginActivity">
-            <intent-filter>
-                <action
-                    android:name="android.intent.action.MAIN">
-                </action>
-                <category
-                    android:name="android.intent.category.LAUNCHER">
-                </category>
-            </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LoginActivity"/>
         </activity>
     </application>
 
